# ai-travel-planner-crew

./: .gitignore  Output.md  README.md  analysis.md  architecture.md  pyproject.toml
src/ai_travel_planner/: crew.py  main.py
src/ai_travel_planner/config/: agents.yaml  tasks.yaml
src/ai_travel_planner/tools/: custom_tool.py
