[project]
name = "ai_travel_planner"
version = "0.1.0"
description = "ai_travel_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=1.9.3",
    "crewai[google-genai,tools]==1.9.3",
    "fastapi>=0.133.1",
    "litellm>=1.75.3",
]

[project.scripts]
ai_travel_planner = "ai_travel_planner.main:run"
run_crew = "ai_travel_planner.main:run"
train = "ai_travel_planner.main:train"
replay = "ai_travel_planner.main:replay"
test = "ai_travel_planner.main:test"
run_with_trigger = "ai_travel_planner.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
