[project]
name = "ai-travel-planner-crew"
version = "0.1.0"
description = "ai-travel-planner-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=1.9.3",
    "crewai[google-genai,tools]==1.9.3",
    "fastapi>=0.133.1",
    "litellm>=1.75.3",
]

[project.scripts]
ai_travel_planner = "ai-travel-planner-crew.main:run"
run_crew = "ai-travel-planner-crew.main:run"
train = "ai-travel-planner-crew.main:train"
replay = "ai-travel-planner-crew.main:replay"
test = "ai-travel-planner-crew.main:test"
run_with_trigger = "ai-travel-planner-crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
