[project]
name = "ai-travel-planner-crew"
version = "0.1.0"
description = "AI Travel Planner using CrewAI, Groq, and Serper"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai-tools>=1.9.3",
    "crewai[google-genai,tools]==1.9.3",
    "fastapi>=0.133.1",
    "litellm>=1.75.3",
]

[project.scripts]
run_crew = "ai_travel_planner.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_travel_planner"]

[tool.crewai]
type = "crew"
